--- a/workout-tracker.html
+++ b/workout-tracker.html
@@ -834,19 +834,19 @@ if (currentMonthEl) {
       <!-- BOTTOM NAVIGATION -->
      <nav class="fixed bottom-0 left-0 right-0 bg-darkCard border-t border-gray-200 border-gray-800 flex justify-around items-center h-16 pb-safe z-20 transition-colors duration-300" style="-webkit-box-shadow: 0px 0px 50px 64px #111827;
     box-shadow: 0px 0px 50px 64px #111827;">
-   <button onclick="app.router.go('dashboard')" class="nav-btn active flex flex-col items-center justify-center w-full h-full text-gray-400 hover:text-primary transition">
+   <button onclick="app.router.go('dashboard')" class="nav-btn active flex flex-col items-center justify-center w-full h-full text-gray-500 hover:text-purple-400 transition">
    <i class="fa-solid fa-house mb-1"></i>
    <span class="text-[10px] font-medium">Home</span> 
    </button>
-   <button onclick="app.router.go('badges')" class="nav-btn flex flex-col items-center justify-center w-full h-full text-gray-400 hover:text-primary transition">
+   <button onclick="app.router.go('badges')" class="nav-btn flex flex-col items-center justify-center w-full h-full text-gray-500 hover:text-purple-400 transition">
    <i class="fa-solid fa-trophy mb-1"></i>
    <span class="text-[10px] font-medium">Traguardi</span>
    </button>
-   <button onclick="app.router.go('stats')" class="nav-btn flex flex-col items-center justify-center w-full h-full text-gray-400 hover:text-primary transition">
+   <button onclick="app.router.go('stats')" class="nav-btn flex flex-col items-center justify-center w-full h-full text-gray-500 hover:text-purple-400 transition">
    <i class="fa-solid fa-chart-simple mb-1"></i>
    <span class="text-[10px] font-medium">Statistiche</span>
    </button>
-   <button onclick="app.router.go('settings')" class="nav-btn flex flex-col items-center justify-center w-full h-full text-gray-400 hover:text-primary transition">
+   <button onclick="app.router.go('settings')" class="nav-btn flex flex-col items-center justify-center w-full h-full text-gray-500 hover:text-purple-400 transition">
    <i class="fa-solid fa-gear mb-1"></i>
    <span class="text-[10px] font-medium">Impostazioni</span>
    </button>
