--- a/workout-tracker.html
+++ b/workout-tracker.html
@@ -447,7 +447,7 @@ if (currentMonthEl) {
             <!-- Active Header -->
             <div class="px-4 py-4 flex items-center border-b border-gray-700">
                <!-- Sinistra -->
-               <button onclick="app.handlers.confirmExitWorkout()" class="text-gray-400">
+               <button onclick="app.handlers.confirmExitWorkout()" class="text-gray-400 px-2">
                <i class="fa-solid fa-xmark text-2xl"></i>
                </button>
                <!-- Centro -->
@@ -479,7 +479,7 @@ if (currentMonthEl) {
 </div>
 
                <!-- Destra -->
-               <button onclick="app.handlers.toggleSound()" id="sound-toggle" class="text-gray-400">
+               <button onclick="app.handlers.toggleSound()" id="sound-toggle" class="text-gray-400 px-2">
                <i class="fa-solid fa-volume-high"></i>
                </button>
             </div>
