--- a/workout-tracker.html
+++ b/workout-tracker.html
@@ -395,7 +395,7 @@ if (currentMonthEl) {
          <!-- VIEW: WORKOUT EDITOR --> 
          <section id="view-editor" class="view-section p-4 bg-darkBg bg-darkBg min-h-full inset-0 z-30 overflow-y-auto no-scrollbar fixed">
 		 <div class="internal-section">
-            <div class="flex items-center gap-3 mb-6 sticky top-0 bg-darkBg bg-darkBg pb-4">
+            <div class="flex items-center gap-3 mb-4 sticky -top-4 bg-darkBg bg-darkBg pt-4 pb-4">
    <!-- Back Button -->
    <button onclick="app.router.go('dashboard')" class="p-0 text-gray-400 hover:text-white hover:bg-gray-800 rounded-xl transition-all active:scale-95">
       <i class="fa-solid fa-arrow-left text-xl"></i>
@@ -1600,12 +1600,13 @@ renderBadges: () => {
          el.className = ' bg-gray-800 p-3 rounded-lg flex justify-between items-center group touch-manipulation';
          el.innerHTML = `
 <div class="flex items-center gap-4 flex-1 overflow-hidden">
-<i class="fa-solid fa-grip-lines text-gray-400 cursor-move text-xl"></i>
-<div class="truncate">
-	<div class="font-bold truncate">${ex.name}</div>
-	<div class="text-xs text-gray-500 truncate">${ex.sets} x ${ex.reps} • ${ex.rest}s${ex.isDouble ? ' • 2x' : ''}</div>
+  <i class="fa-solid fa-grip-lines text-gray-400 cursor-move text-xl"></i>
+  <div class="overflow-hidden">
+    <div class="font-bold text-sm">${ex.name}</div>
+    <div class="text-xs text-gray-500">${ex.sets} x ${ex.reps} • ${ex.rest}s${ex.isDouble ? ' • 2x' : ''}</div>
+  </div>
 </div>
-</div>
+
 <div class="flex items-center gap-2">
 <button onclick="app.handlers.editExercise(${idx})" class="bg-primary/20 text-white hover:bg-primary hover:text-white px-3.5 py-2.5 rounded-lg font-semibold text-sm transition-all active:scale-95 flex items-center gap-2 border border-primary/30">
 	<i class="fa-solid fa-pencil"></i>
