--- a/workout-tracker.html
+++ b/workout-tracker.html
@@ -1615,7 +1615,7 @@ showBadgeNotification: () => {
             <div class="flex items-center gap-4">
                 <img src="${badge.icon}" alt="${badge.name}" class="w-20 h-20">
                 <div class="flex-1">
-                    <div class="text-sm opacity-90 uppercase tracking-wider font-semibold">🏆 Traguardo Sbloccato!</div>
+                    <div class="text-xs opacity-90 uppercase tracking-wider font-semibold">Traguardo Sbloccato!</div>
                     <h3 class="text-xl font-bold mt-1">${badge.name}</h3>
                     <p class="text-sm opacity-90 mt-1">${badge.desc}</p>
                 </div>
