--- a/workout-tracker.html
+++ b/workout-tracker.html
@@ -1363,7 +1363,7 @@ updateWeightComparison: () => {
         comparisonEl.innerHTML = `<span class="text-orange-400"><i class="fa-solid fa-arrow-down"></i> ${diff.toFixed(1)} kg vs ultima volta</span>`;
     } else {
         // Stesso peso
-        comparisonEl.innerHTML = `<span class="text-gray-400"><i class="fa-solid fa-equals"></i></span>`;
+        comparisonEl.innerHTML = `<span class="text-gray-400"></span>`;
     }
 },
 		 
