--- a/workout-tracker.html
+++ b/workout-tracker.html
@@ -21,6 +21,21 @@
       <meta http-equiv="Expires" content="0">
       <style>	
 	  
+	  #exercise-notes-content{
+	  margin-top: 12px;
+    background-color: #111827;
+    border: 1px solid #38404f;
+	}
+	  
+	  #footer-progress-text{
+	  margin-top: -30px;
+    background-color: #5127f2;
+    padding: 6px 16px;
+    border-radius: 15px;
+    font-weight: 500;
+    color: #FFF;
+	  }
+	  
 	  #weight-comparison{
 		white-space:nowrap;
 		color:#c084fc;
@@ -701,10 +716,7 @@ if (currentMonthEl) {
                   <div class="text-center" style="
     width:100%;
     padding: 15px 30px;
-    border-radius: 18px;
-    -webkit-box-shadow: 0px 0px 12px 6px #0d1423;
-    box-shadow: 0px 0px 12px 6px #0d1423;
-    background-color: #1f2937;
+   
 ">
                      <i class="fa-solid fa-dumbbell text-primary text-4xl mb-3 animate-pulse"></i>
                      <span class="text-gray-400 text-sm uppercase tracking-widest block">Serie in corso</span>
