--- a/workout-tracker.html
+++ b/workout-tracker.html
@@ -19,6 +19,8 @@
       <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
       <meta http-equiv="Pragma" content="no-cache">
       <meta http-equiv="Expires" content="0">
+
+	   <script data-goatcounter="https://redmood.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
       <style>	
 	  
 	  #exercise-notes-content{
