--- a/workout-tracker.html
+++ b/workout-tracker.html
@@ -1861,7 +1861,7 @@ renderBadges: () => {
             <div class="relative flex-shrink-0">
                 <img src="${def.icon}" alt="${def.name}" class="w-20 rounded-xl ${unlocked ? 'shadow-lg' : 'badge-icon-locked'}">
                 ${data.count > 1 ? `
-                    <span class="absolute -top-2 -right-2 bg-gradient-to-br from-yellow-400 to-orange-500 text-white text-sm font-bold px-2.5 py-1 rounded-full shadow-lg border-2 border-white">
+                    <span class="absolute -top-2 -right-2 bg-gradient-to-br from-purple-400 to-white-500 text-white text-sm font-bold px-2.5 py-1 rounded-full shadow-lg border-2 border-white">
                         ×${data.count}
                     </span>
                 ` : ''}
