--- a/workout-tracker.html
+++ b/workout-tracker.html
@@ -266,7 +266,14 @@ color:#c084fc;
          }
          /* Layout mobile-first responsive */
          @media (min-width: 768px) {
-         nav, main {
+			 .fixed.bottom-0.left-0.right-0.bg-gray-800.pb-safe.z-40{
+				     max-width: 480px;
+    left: 0 !important;
+    right: 0 !important;
+    margin: 0 auto !important;
+			 }
+         nav, main, header {
+			 width:100%;
          max-width: 480px;
          margin: 0 auto;
          box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
