--- a/workout-tracker.html
+++ b/workout-tracker.html
@@ -272,7 +272,7 @@ color:#c084fc;
     right: 0 !important;
     margin: 0 auto !important;
 			 }
-         nav, main, header {
+         nav, main, header, section.view-section {
 			 width:100%;
          max-width: 480px;
          margin: 0 auto;
