--- a/workout-test.html
+++ b/workout-test.html
@@ -706,7 +706,7 @@ color:#c084fc;
                         <button onclick="app.handlers.adjustWeight(-1)" style="width: 5.5rem;" class=" h-10 rounded-lg bg-gray-800 border border-gray-600 text-sm font-bold active:scale-95">-1 kg</button>
                      </div>
                      <!-- Display Peso -->
-                     <div class="text-center px-2">
+                    <div class="text-center px-2" style="min-width: 125px;">
                         <span id="active-weight-value" class="text-5xl font-bold font-mono text-white">0</span>
                         <span class="text-l font-bold text-gray-500 block uppercase">kg</span>
 						
