--- a/workout-test.html
+++ b/workout-test.html
@@ -3758,7 +3758,7 @@ if (motivationalToggle) {
          <div class="flex flex-col items-center gap-4 mb-3">
              <div class="inline-flex items-center px-3 py-1 rounded-full bg-white/5 border border-white/10 text-[11px] text-gray-400 uppercase tracking-widest">
                 <i class="fa-solid fa-shield-halved mr-2 text-primary"></i>
-                La valutazione è anonima
+                La tua valutazione è anonima
              </div>
              
              <!-- <button onclick="app.handlers.skipRating()" class="text-gray-500 hover:text-white text-sm font-medium transition-colors duration-200 border-b border-transparent hover:border-white/20 pb-1">
