--- a/test-pwa.html
+++ b/test-pwa.html
@@ -618,19 +618,22 @@ color:#c084fc;
    </head>
    <body class="bg-darkBg text-gray-100 h-screen flex flex-col overflow-hidden">
       <!-- HEADER -->
-      <header class="bg-darkCard shadow-sm z-20 px-4 py-3 grid grid-cols-3 items-center" style="-webkit-box-shadow: 0px 0px 22px 4px #111827;
+<header class="bg-darkCard shadow-sm z-20 px-4 py-3 grid grid-cols-3 items-center" style="-webkit-box-shadow: 0px 0px 22px 4px #111827;
     box-shadow: 0px 0px 22px 4px #111827;">
-         <!-- Sinistra (vuoto o future azioni) -->
-         <div></div>
-         <!-- Centro: LOGO -->
-         <div class="flex items-center justify-center gap-2">
-            <!-- <i class="fa-solid fa-dumbbell text-primary text-xl"></i> -->
-            <h1 class="font-bold text-lg tracking-tight">WorkoutTracker</h1>
-         </div>
-         <!-- Destra -->
-         <div class="flex justify-end">
-         </div>
-      </header>
+   <!-- Sinistra (vuoto o future azioni) -->
+   <div></div>
+   <!-- Centro: LOGO con Icona -->
+   <div class="flex items-center justify-center gap-2">
+      <img src="https://rccremonesi-cmyk.github.io/workout/barbell-ico.png" 
+           alt="WorkoutTracker" 
+           class="w-8 h-8"
+           style="border-radius: 22%; box-shadow: 0 2px 8px rgba(81, 39, 242, 0.3);">
+      <h1 class="font-bold text-lg tracking-tight">WorkoutTracker</h1>
+   </div>
+   <!-- Destra -->
+   <div class="flex justify-end">
+   </div>
+</header>
       <!-- MAIN CONTENT AREA -->
       <main id="app-container" class="flex-1 overflow-y-auto overflow-x-hidden relative hide-scrollbar" style="padding-bottom: 8.5rem;">
 	  
