--- a/test-pwa.html
+++ b/test-pwa.html
@@ -1636,13 +1636,15 @@ deferredPrompt: null,
     motivationalPhrases: [
         'Spacca tutto! 💪',
         'Hai preso il \ntuo preworkout? 🥤',
-        'Non fare lo \nscoppiato! 💥',
-        'Secco mai 😤',
-        'Vai Uomooo! 💪',
-        'Non mollare! ✊',
-        'Beast mode! 🐻',
-        'Focus totale 🎯',
-        'Ricordati di \nrimanere idratato! 💧'
+		'Hai già fatto \nriscaldamento? 🔥',
+		'È ora di \nspingere forte! 🚀',
+		'Un passo alla \nvolta, andiamo! 👣',
+		'Costanza > \nscuse 💥',
+		'Focus totale, \nsei in zona 🎯',
+        'Ricordati di \nrimanere idratato! 💧',
+		'Fatica oggi, \norgoglio domani 🏆',
+		'Spingi ora, \nrilassati dopo 😎',
+		'Se brucia, \nfunziona 🔥'
     ],
     preferredDays: []
 },
