--- a/test-pwa.html
+++ b/test-pwa.html
@@ -210,7 +210,7 @@ input#editor-archived:focus {
 		    display: inline-block;
 	  }
 	  
-#add-workout-fab, #add-btn, #badge-notification {
+#add-workout-fab, #add-btn, #badge-notification,  {
     animation: gentleBounce 1.8s ease-in-out infinite;
 }
 .workout-started main#app-container {
@@ -2088,7 +2088,7 @@ if (todayWorkouts.length > 0) {
             .sort((a, b) => new Date(b.date) - new Date(a.date))[0];
         
         return `
-            <div class="bg-darkCard p-4 rounded-xl shadow-sm flex justify-between items-center border-l-4 border-primary">
+            <div class="bg-darkCard p-4 rounded-xl shadow-sm flex justify-between items-center border" style="border-width: 3px; border-color:rgb(111 60 207 / 40%);">
                 <div class="flex items-center gap-3 flex-1">
                     <div class="w-12 h-12 rounded-2xl flex items-center justify-center flex-shrink-0" 
                          style="background: ${w.color || '#5127f2'}">
